xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__abbreviated_forward_step_attr.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"@foo\")"
---
Spanned {
    value: Path(
        PathExpr {
            steps: [
                Spanned {
                    value: AxisStep(
                        AxisStep {
                            axis: Attribute,
                            node_test: NameTest(
                                Name(
                                    Name {
                                        name: "foo",
                                        namespace: None,
                                    },
                                ),
                            ),
                            predicates: [],
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            0,
                        ),
                        length: SourceOffset(
                            4,
                        ),
                    },
                },
            ],
        },
    ),
    span: SourceSpan {
        offset: SourceOffset(
            0,
        ),
        length: SourceOffset(
            4,
        ),
    },
}
