xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__abbreviated_forward_step_with_attribute_test.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"foo/attribute()\")"
---
Spanned {
    value: Path(
        PathExpr {
            steps: [
                Spanned {
                    value: AxisStep(
                        AxisStep {
                            axis: Child,
                            node_test: NameTest(
                                Name(
                                    Name {
                                        name: "foo",
                                        namespace: None,
                                    },
                                ),
                            ),
                            predicates: [],
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            0,
                        ),
                        length: SourceOffset(
                            3,
                        ),
                    },
                },
                Spanned {
                    value: AxisStep(
                        AxisStep {
                            axis: Attribute,
                            node_test: KindTest(
                                Attribute(
                                    None,
                                ),
                            ),
                            predicates: [],
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            4,
                        ),
                        length: SourceOffset(
                            11,
                        ),
                    },
                },
            ],
        },
    ),
    span: SourceSpan {
        offset: SourceOffset(
            0,
        ),
        length: SourceOffset(
            15,
        ),
    },
}
