xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__abbreviated_reverse_step.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"foo/..\")"
---
Path(
    PathExpr {
        steps: [
            AxisStep(
                AxisStep {
                    axis: Child,
                    node_test: NameTest(
                        Name(
                            Name {
                                name: "foo",
                                namespace: None,
                            },
                        ),
                    ),
                    predicates: [],
                },
            ),
            AxisStep(
                AxisStep {
                    axis: Parent,
                    node_test: KindTest(
                        Any,
                    ),
                    predicates: [],
                },
            ),
        ],
    },
)
