xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__additive_expr.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"1 + 2\")"
---
(
    Binary(
        BinaryExpr {
            operator: Add,
            left: PathExpr {
                steps: [
                    (
                        PrimaryExpr(
                            (
                                Literal(
                                    Integer(
                                        1,
                                    ),
                                ),
                                SourceSpan {
                                    offset: SourceOffset(
                                        0,
                                    ),
                                    length: SourceOffset(
                                        1,
                                    ),
                                },
                            ),
                        ),
                        SourceSpan {
                            offset: SourceOffset(
                                0,
                            ),
                            length: SourceOffset(
                                1,
                            ),
                        },
                    ),
                ],
            },
            right: PathExpr {
                steps: [
                    (
                        PrimaryExpr(
                            (
                                Literal(
                                    Integer(
                                        2,
                                    ),
                                ),
                                SourceSpan {
                                    offset: SourceOffset(
                                        4,
                                    ),
                                    length: SourceOffset(
                                        1,
                                    ),
                                },
                            ),
                        ),
                        SourceSpan {
                            offset: SourceOffset(
                                4,
                            ),
                            length: SourceOffset(
                                1,
                            ),
                        },
                    ),
                ],
            },
        },
    ),
    SourceSpan {
        offset: SourceOffset(
            0,
        ),
        length: SourceOffset(
            5,
        ),
    },
)
