xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__additive_expr_repeat.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"1 + 2 + 3\")"
---
(
    Binary(
        BinaryExpr {
            operator: Add,
            left: PathExpr {
                steps: [
                    (
                        PrimaryExpr(
                            (
                                Expr(
                                    [
                                        (
                                            Binary(
                                                BinaryExpr {
                                                    operator: Add,
                                                    left: PathExpr {
                                                        steps: [
                                                            (
                                                                PrimaryExpr(
                                                                    (
                                                                        Literal(
                                                                            Integer(
                                                                                1,
                                                                            ),
                                                                        ),
                                                                        0..1,
                                                                    ),
                                                                ),
                                                                0..1,
                                                            ),
                                                        ],
                                                    },
                                                    right: PathExpr {
                                                        steps: [
                                                            (
                                                                PrimaryExpr(
                                                                    (
                                                                        Literal(
                                                                            Integer(
                                                                                2,
                                                                            ),
                                                                        ),
                                                                        4..5,
                                                                    ),
                                                                ),
                                                                4..5,
                                                            ),
                                                        ],
                                                    },
                                                },
                                            ),
                                            0..6,
                                        ),
                                    ],
                                ),
                                0..6,
                            ),
                        ),
                        0..6,
                    ),
                ],
            },
            right: PathExpr {
                steps: [
                    (
                        PrimaryExpr(
                            (
                                Literal(
                                    Integer(
                                        3,
                                    ),
                                ),
                                8..9,
                            ),
                        ),
                        8..9,
                    ),
                ],
            },
        },
    ),
    0..9,
)
