xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__and_expr.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"1 and 2\")"
---
Spanned {
    value: Binary(
        BinaryExpr {
            operator: And,
            left: PathExpr {
                steps: [
                    Spanned {
                        value: PrimaryExpr(
                            Spanned {
                                value: Literal(
                                    Integer(
                                        1,
                                    ),
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        0,
                                    ),
                                    length: SourceOffset(
                                        1,
                                    ),
                                },
                            },
                        ),
                        span: SourceSpan {
                            offset: SourceOffset(
                                0,
                            ),
                            length: SourceOffset(
                                1,
                            ),
                        },
                    },
                ],
            },
            right: PathExpr {
                steps: [
                    Spanned {
                        value: PrimaryExpr(
                            Spanned {
                                value: Literal(
                                    Integer(
                                        2,
                                    ),
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        6,
                                    ),
                                    length: SourceOffset(
                                        1,
                                    ),
                                },
                            },
                        ),
                        span: SourceSpan {
                            offset: SourceOffset(
                                6,
                            ),
                            length: SourceOffset(
                                1,
                            ),
                        },
                    },
                ],
            },
        },
    ),
    span: SourceSpan {
        offset: SourceOffset(
            0,
        ),
        length: SourceOffset(
            7,
        ),
    },
}
