xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__attribute_test_no_args.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"self::attribute()\")"
---
(
    Path(
        PathExpr {
            steps: [
                (
                    AxisStep(
                        AxisStep {
                            axis: Self_,
                            node_test: KindTest(
                                Attribute(
                                    None,
                                ),
                            ),
                            predicates: [],
                        },
                    ),
                    SourceSpan {
                        offset: SourceOffset(
                            0,
                        ),
                        length: SourceOffset(
                            17,
                        ),
                    },
                ),
            ],
        },
    ),
    SourceSpan {
        offset: SourceOffset(
            0,
        ),
        length: SourceOffset(
            17,
        ),
    },
)
