xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__axis_star.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"child::*\")"
---
(
    Path(
        PathExpr {
            steps: [
                (
                    AxisStep(
                        AxisStep {
                            axis: Child,
                            node_test: NameTest(
                                Star,
                            ),
                            predicates: [],
                        },
                    ),
                    0..8,
                ),
            ],
        },
    ),
    0..8,
)
