xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__axis_wildcard_local_name.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"child::fn:*\")"
---
(
    Path(
        PathExpr {
            steps: [
                AxisStep(
                    AxisStep {
                        axis: Child,
                        node_test: (
                            NameTest(
                                Namespace(
                                    "http://www.w3.org/2005/xpath-functions",
                                ),
                            ),
                            0..11,
                        ),
                        predicates: [],
                    },
                ),
            ],
        },
    ),
    0..11,
)
